# Diet-Coach-Agent

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  DECISIONS.md  NEXT_STEPS.md  PROJECT_STATE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  app.db-shm  app.db-wal  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_user_is_onboarded.py  0003_add_nutrition_plan_metadata.py  0004_add_nutrition_calendar.py  0005_expand_daily_checkins.py  0006_profile_measurements_goals_hunger.py  0007_expand_weekly_plan_structure.py  0008_add_budget_day_fields.py  0009_add_chat_message_status.py
backend/app/: main.py
backend/app/api/: admin_dependencies.py  dependencies.py
backend/tests/: conftest.py  test_adapt_plan_revision.py  test_admin.py  test_agent_confirmation.py  test_agent_orchestrator_policy.py  test_agent_sql_tool_safety.py  test_ai_provider.py  test_behavior_coaching_phase6.py  test_chat.py  test_daily_workflows_phase5.py  test_diet_protocol_intelligence.py  test_diet_quality_gates.py  test_nutrition_agent_service.py  test_nutrition_memory_service.py  test_nutrition_personalization.py  test_nutrition_plan_safety.py  test_onboarding_female_only_guardrail.py  test_onboarding_schema_validation.py  test_preference_extractor.py  test_progress.py  test_prompt_builder_requirements.py  test_safety_guardrails.py  test_settings.py  test_weekly_plan_personalization.py
(+223 files in other folders)
