[project]
name = "diet-coach-agent-backend"
version = "0.1.0"
description = "AI-powered nutrition coaching backend"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # Config / validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # Auth
    "PyJWT>=2.8.0",
    # File upload (for audio)
    "python-multipart>=0.0.9",
    # HTTP client (for OpenAI provider); [socks] adds socksio for SOCKS5 proxy support
    "httpx[socks]>=0.27.0",
    # Password hashing (future auth hardening)
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
